renomenaod e ediçoes de melhorias

--- a/dados_com_py.ipynb
+++ b/dados_com_py.ipynb
@@ -2725,6 +2725,152 @@
    "source": [
     "df_limpo.to_csv(\"imersao_final_dados.csv\", index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "ced60b19",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ano</th>\n",
+       "      <th>senioridade</th>\n",
+       "      <th>contrato</th>\n",
+       "      <th>cargo</th>\n",
+       "      <th>salario</th>\n",
+       "      <th>moeda</th>\n",
+       "      <th>usd</th>\n",
+       "      <th>residencia</th>\n",
+       "      <th>remoto</th>\n",
+       "      <th>empresa</th>\n",
+       "      <th>porte_empresa</th>\n",
+       "      <th>residencia_iso3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2025</td>\n",
+       "      <td>Sênior</td>\n",
+       "      <td>Tempo Integral</td>\n",
+       "      <td>Solutions Engineer</td>\n",
+       "      <td>214000</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>214000</td>\n",
+       "      <td>US</td>\n",
+       "      <td>Remoto</td>\n",
+       "      <td>US</td>\n",
+       "      <td>Média</td>\n",
+       "      <td>USA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2025</td>\n",
+       "      <td>Sênior</td>\n",
+       "      <td>Tempo Integral</td>\n",
+       "      <td>Solutions Engineer</td>\n",
+       "      <td>136000</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>136000</td>\n",
+       "      <td>US</td>\n",
+       "      <td>Remoto</td>\n",
+       "      <td>US</td>\n",
+       "      <td>Média</td>\n",
+       "      <td>USA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2025</td>\n",
+       "      <td>Pleno</td>\n",
+       "      <td>Tempo Integral</td>\n",
+       "      <td>Data Engineer</td>\n",
+       "      <td>158800</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>158800</td>\n",
+       "      <td>AU</td>\n",
+       "      <td>Presencial</td>\n",
+       "      <td>AU</td>\n",
+       "      <td>Média</td>\n",
+       "      <td>AUS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2025</td>\n",
+       "      <td>Pleno</td>\n",
+       "      <td>Tempo Integral</td>\n",
+       "      <td>Data Engineer</td>\n",
+       "      <td>139200</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>139200</td>\n",
+       "      <td>AU</td>\n",
+       "      <td>Presencial</td>\n",
+       "      <td>AU</td>\n",
+       "      <td>Média</td>\n",
+       "      <td>AUS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2025</td>\n",
+       "      <td>Entrada</td>\n",
+       "      <td>Tempo Integral</td>\n",
+       "      <td>Data Engineer</td>\n",
+       "      <td>90000</td>\n",
+       "      <td>USD</td>\n",
+       "      <td>90000</td>\n",
+       "      <td>US</td>\n",
+       "      <td>Presencial</td>\n",
+       "      <td>US</td>\n",
+       "      <td>Média</td>\n",
+       "      <td>USA</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    ano senioridade        contrato               cargo  salario moeda  \\\n",
+       "0  2025      Sênior  Tempo Integral  Solutions Engineer   214000   USD   \n",
+       "1  2025      Sênior  Tempo Integral  Solutions Engineer   136000   USD   \n",
+       "2  2025       Pleno  Tempo Integral       Data Engineer   158800   USD   \n",
+       "3  2025       Pleno  Tempo Integral       Data Engineer   139200   USD   \n",
+       "4  2025     Entrada  Tempo Integral       Data Engineer    90000   USD   \n",
+       "\n",
+       "      usd residencia      remoto empresa porte_empresa residencia_iso3  \n",
+       "0  214000         US      Remoto      US         Média             USA  \n",
+       "1  136000         US      Remoto      US         Média             USA  \n",
+       "2  158800         AU  Presencial      AU         Média             AUS  \n",
+       "3  139200         AU  Presencial      AU         Média             AUS  \n",
+       "4   90000         US  Presencial      US         Média             USA  "
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_limpo.head()"
+   ]
   }
  ],
  "metadata": {
